# MLE

./: .gitignore  Git_clean_sheet.py  Makefile  README.md  environment.yml  name.csv  pyproject.toml  test.py  test2.py  text2.txt  variable.py
scripts/: DAY_1.py  Day3.py  Day3_ module.py  Day4.py  Day_2.py  Day_3.py  Day_3_project.py  fix_locale.sh
src/: __init__.py
src/mle/: __init__.py  utils.py
tests/: test_utils.py
